--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "your-dashboard-name",
+  "name": "Signal",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bulma": "^1.0.0",
     "core-js": "^3.8.3",
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0",
@@ -22,7 +23,9 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "sass": "^1.74.1",
+    "sass-loader": "^14.1.1"
   },
   "eslintConfig": {
     "root": true,
