--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "eslint": "^9.0.0",
     "eslint-plugin-vue": "^8.0.3",
     "sass": "^1.74.1",
-    "sass-loader": "^14.1.1"
+    "sass-loader": "^14.1.1",
+    "style-resources-loader": "^1.4.1",
+    "vue-cli-plugin-style-resources-loader": "~0.1.5"
   },
   "eslintConfig": {
     "root": true,
