--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-regular-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/vue-fontawesome": "^3.0.6",
     "bulma": "^1.0.0",
     "core-js": "^3.8.3",
+    "eslint": "^8.0.0",
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0",
     "vue": "^3.2.13",
@@ -22,8 +27,8 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "eslint": "^9.0.0",
     "eslint-plugin-vue": "^8.0.3",
+    "node-sass": "^9.0.0",
     "sass": "^1.74.1",
     "sass-loader": "^14.1.1",
     "style-resources-loader": "^1.4.1",
