--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "deploy": "vue-cli-service build && echo 'luispalomares.com' > dist/CNAME && gh-pages -d dist",
+    "predeploy": "npm run build && echo 'luispalomares.com' > dist/CNAME",
+    "deploy": "gh-pages --repo https://github.com/ztfo/signal.git -d dist",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
