--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "predeploy": "npm run build && echo 'luispalomares.com' > dist/CNAME",
-    "deploy": "gh-pages --repo https://github.com/ztfo/signal.git -d dist",
+    "predeploy": "npm run build",
+    "deploy": "vue-cli-service build && echo 'luispalomares.com' > dist/CNAME && gh-pages -d dist",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -15,6 +15,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/vue-fontawesome": "^3.0.6",
+    "bl": "^6.0.19",
     "bulma": "^1.0.0",
     "core-js": "^3.8.3",
     "eslint": "^8.0.0",
@@ -33,8 +34,7 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint-plugin-vue": "^8.0.3",
-    "gh-pages": "^6.1.1",
-    "node-sass": "^9.0.0",
+    "gh-pages": "^6.3.0",
     "sass": "^1.74.1",
     "sass-loader": "^14.1.1",
     "style-resources-loader": "^1.4.1",
