--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/vue-fontawesome": "^3.0.6",
     "bl": "^6.0.19",
-    "bulma": "^1.0.0",
-    "core-js": "^3.8.3",
+    "bulma": "^1.0.4",
+    "core-js": "^3.45.1",
     "eslint": "^8.0.0",
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0",
@@ -29,6 +29,8 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@babel/plugin-transform-nullish-coalescing-operator": "^7.27.1",
+    "@babel/plugin-transform-optional-chaining": "^7.27.1",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
@@ -36,9 +38,7 @@
     "eslint-plugin-vue": "^8.0.3",
     "gh-pages": "^6.3.0",
     "sass": "^1.74.1",
-    "sass-loader": "^14.1.1",
-    "style-resources-loader": "^1.4.1",
-    "vue-cli-plugin-style-resources-loader": "~0.1.5"
+    "sass-loader": "^14.1.1"
   },
   "eslintConfig": {
     "root": true,
